@@ -3,7 +3,6 @@ from .base import *
 def app(environ,print_rep):
 	try:
 		data = Data(conf,environ)
-		output = sys.stdout
 		rep_status,headers,body, filename = dispatch((conf.query("base_dir")+data.SERVER['PATH_INFO']).replace("//","/"))
 		print_rep(rep_status,headers.get())
 		return [body]
